# Agentic-Semantic-Router

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: index.html  script.js  styles.css
src/emotion_analysis/app/: main.py
src/emotion_analysis/core/: agents.py  graph.py  provider_manager.py  router.py
src/emotion_analysis/observability/: benchmarks.py
src/emotion_analysis/persistence/: memory.py  vector_store.py
tests/: benchmark_cache.py  locustfile.py  test_accuracy.py  test_cache_cleanup.py  test_latency_fastapi.py  test_latency_ollama.py
