[project]
name = "emotion_analysis"
version = "0.1.0"
description = "AI Engineering Overhaul of Emotion Analysis project using LangGraph, Groq, ChromaDB, and FastAPI."
authors = [
    { name = "Rohit Singh", email = "rohit24.rm5@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "langgraph>=0.0.69",
    "langchain>=0.2.6",
    "langchain-groq>=0.1.5",
    "langchain-google-genai>=1.0.6",
    "chromadb>=0.5.0",
    "fastembed>=0.2.7",
    "kaggle>=1.6.14",
    "pydantic>=2.7.4",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.2",
    "langgraph-checkpoint-sqlite>=1.0.0"
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.10",
    "black>=24.4.2"
]

[tool.hatch.build.targets.wheel]
packages = ["src/emotion_analysis"]
